# binary-integers

./: Cargo.toml  README.md
benches/: binary_gcd.rs
src/: binary_gcd.rs  lib.rs
src/integers/: mod.rs  tests.rs
src/integers/natural_numbers/: add.rs  mod.rs  mul.rs  order.rs  shifts.rs  sub.rs
src/integers/operations/: add.rs  mod.rs  mul.rs  neg.rs  order.rs  shifts.rs  sub.rs
